Implement deinterlacing support

Using playbin2's deinterlacing capabilities.

https://bugzilla.gnome.org/show_bug.cgi?id=491627