src/totem-object.c
@@ -4036,9 +4036,6 @@ totem_callback_connect (Totem *totem)
 	GtkBox *box;
 
 	/* Menu items */
-	action = GTK_ACTION (gtk_builder_get_object (totem->xml, "deinterlace"));
-	gtk_action_set_visible (action, bacon_video_widget_can_deinterlace (totem->bvw));
-
 	action = gtk_action_group_get_action (totem->main_action_group, "repeat-mode");
 	gtk_toggle_action_set_active (GTK_TOGGLE_ACTION (action),
 		totem_playlist_get_repeat (totem->playlist));
